<resources>
    <string name="app_name">Agenda Online</string>


    <!--Actividad Main-->
    <string name="boton_login">Login</string>
    <string name="boton_registro">Registro</string>


    <!--Actividad Registro-->
    <string name="CrearCuenta_txt">Crear una cuenta</string>
    <string name="Nombre_editar">Nombre</string>
    <string name="Correo_editar">Correo electrónico</string>
    <string name="Password_editar">Contraseña</string>
    <string name="ConfirmarPassword_editar">Confirmar contraseña</string>
    <string name="RegistrarUsuario">Registrar</string>
    <string name="TengoCuenta_txt">Tengo una cuenta</string>

    <!--Actividad Login-->
    <string name="IniciarSesion">Iniciar Sesión</string>
    <string name="CorreoLogin">Correo</string>
    <string name="PasswordLogin">Contraseña</string>
    <string name="boton_logeo">Ingresar</string>
    <string name="UsuarioNuevo_txt">¿No tienes una cuenta? Regístrate</string>

    <!--Menu Principal-->
    <string name="CerrarSesion">Salir</string>
    <string name="BienvenidoPrincipal">Bienvenido(a)</string>
    <string name="NombrePrincipal">--</string>
    <string name="CorreoPrincipal">--</string>
    <string name="AgregarNota"> Agregar</string>
    <string name="ListarNotas"> Mis Notas</string>

    <!--Agregar Nota-->
    <string name="Uid_Usuario">Uid del Usuario</string>
    <string name="Correo_Usuario">Correo del Usuario</string>
    <string name="Fecha_Hora_Actual">Fecha y hora actual</string>
    <string name="Titulo">Titulo</string>
    <string name="Boton_Calendario">Calendario</string>
    <string name="Descripcion">Descripcion</string>
    <string name="Fecha">00/00/00</string>
    <string name="Estado">No finalizado</string>
    <string name="Boton_GuardarNota_BD">Guardar</string>

    <!--Menu BD-->
    <string name="Agregar_Nota_BD">Agregar</string>



    <!--Listar Notas-->

    <string name="Id_nota_Item">Id nota</string>
    <string name="Uid_Usuario_Item">Uid del Usuario</string>
    <string name="Correo_Usuario_Item">Correo del Usuario</string>
    <string name="Fecha_Hora_Actual_Item">Fecha y hora actual</string>
    <string name="Titulo_Item">Titulo</string>
    <string name="Boton_Calendario_Item">Calendario</string>
    <string name="Descripcion_Item">Descripcion</string>
    <string name="Fecha_Item">00/00/00</string>
    <string name="Estado_Item">No finalizado</string>
    <string name="Boton_GuardarNota_BD_Item">Guardar</string>


    <!--Eliminar-->

    <string name="Eliminar">Eliminar</string>


</resources>