<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    android:padding="0.2dp"
    app:cardCornerRadius="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/Id_nota_Item"
            android:text="@string/Id_nota_Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/Uid_Usuario_Item"
            android:text="@string/Uid_Usuario_Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/Correo_Usuario_Item"
            android:text="@string/Correo_Usuario_Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/Fecha_Hora_Actual_Item"
            android:text="@string/Fecha_Hora_Actual_Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/Titulo_Item"
            android:text="@string/Titulo_Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/Descripcion_Item"
            android:text="@string/Descripcion_Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/Fecha_Item"
            android:text="@string/Fecha_Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/Estado_Item"
            android:text="@string/Estado_Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:visibility="gone"/>



    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>