<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/CrearCuenta_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:gravity="center"/>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="registro.json"
            app:lottie_imageAssetsFolder="assets"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            app:lottie_loop="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"/>

                <EditText
                    android:id="@+id/Nombre_editar"
                    android:hint="@string/Nombre_editar"
                    android:layout_width="match_parent"
                    android:inputType="textPersonName|textCapWords"
                    android:drawableStart="@drawable/icono_nombre"
                    android:drawablePadding="10dp"
                    android:padding="20dp"
                    android:layout_height="wrap_content"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/Correo_editar"
            android:hint="@string/Correo_editar"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/icono_correo"
            android:drawablePadding="10dp"
            android:padding="20dp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:passwordToggleEnabled="true" />

        <EditText
            android:id="@+id/Password_editar"
            android:hint="@string/Password_editar"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:drawableStart="@drawable/icono_password"
            android:drawablePadding="10dp"
            android:padding="20dp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:passwordToggleEnabled="true" />

        <EditText
            android:id="@+id/ConfirmarPassword_editar"
            android:hint="@string/ConfirmarPassword_editar"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:drawableStart="@drawable/icono_password"
            android:drawablePadding="10dp"
            android:padding="20dp"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/RegistrarUsuario"
            android:text="@string/RegistrarUsuario"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/TengoCuenta_txt"
            android:text="@string/TengoCuenta_txt"
            android:gravity="center"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>